@@ -299,6 +299,7 @@ void ChildItem::setData( const QVariant& data, int role )
 JourneyItem::JourneyItem( const JourneyInfo& journeyInfo, const Info* info )
         : TopLevelItem( info )
 {
+    m_alarm = NoAlarm;
     setJourneyInfo( journeyInfo );
 }
 
@@ -329,8 +330,12 @@ QVariant JourneyItem::data( int role, int column ) const
         return QVariant();
     }
 
-    if ( column < m_columnData.count() && m_columnData[column].contains( role ) ) {
+    if ( column < m_columnData.count() && m_columnData[column].contains(role) ) {
         return m_columnData[column].value( role );
+    } else if ( role == DrawAlarmBackgroundRole ) {
+        return m_alarm.testFlag( AlarmPending );// || !qFuzzyIsNull( m_alarmColorIntensity );
+    } else if ( role == AlarmColorIntensityRole ) {
+        return m_alarm.testFlag( AlarmPending ) ? 1.0 : 0.0;//m_alarmColorIntensity;
     } else if ( !m_parent ) {
         switch ( role ) {
         case LinesPerRowRole:
@@ -1120,29 +1125,62 @@ void DepartureItem::removeAlarm()
 }
 
 void DepartureItem::setAlarmStates( AlarmStates alarmStates )
-{
+{ // TODO
     m_alarm = alarmStates;
 
-    if ( alarmStates.testFlag( AlarmPending ) ) {
-        if ( alarmStates.testFlag( AlarmIsRecurring ) ) {
+    if ( alarmStates.testFlag(AlarmPending) ) {
+        if ( alarmStates.testFlag(AlarmIsRecurring) ) {
             // Add alarm icon with a recurring-icon as overlay
-            setIcon( ColumnDeparture, KIcon( "task-reminder", NULL,
-                                            QStringList() << "task-recurring" ) );
+            setIcon( ColumnDeparture, KIcon("task-reminder", NULL,
+                                            QStringList() << "task-recurring") );
         } else {
             // Add alarm icon
-            setIcon( ColumnDeparture, KIcon( "task-reminder" ) );
+            setIcon( ColumnDeparture, KIcon("task-reminder") );
         }
     } else if ( alarmStates == NoAlarm ) {
         // Remove alarm icon
         setIcon( ColumnDeparture, KIcon() );
-    } else if ( alarmStates.testFlag( AlarmFired ) ) {
+    } else if ( alarmStates.testFlag(AlarmFired) ) {
         // Add disabled alarm icon
         KIconEffect iconEffect;
         KIcon icon = alarmStates.testFlag( AlarmIsRecurring )
                     ? KIcon( "task-reminder", NULL, QStringList() << "task-recurring" )
                     : KIcon( "task-reminder" );
         QPixmap pixmap = iconEffect.apply( icon.pixmap( 16 * m_info->sizeFactor ),
-                                        KIconLoader::Small, KIconLoader::DisabledState );
+                                           KIconLoader::Small, KIconLoader::DisabledState );
+        KIcon disabledAlarmIcon;
+        disabledAlarmIcon.addPixmap( pixmap, QIcon::Normal );
+        setIcon( ColumnDeparture, disabledAlarmIcon );
+    }
+
+    m_model->itemChanged( this, 0, 2 );
+    m_model->childrenChanged( this ); // Children inherit the alarm background
+}
+
+void JourneyItem::setAlarmStates(AlarmStates alarmStates)
+{ // TODO
+    m_alarm = alarmStates;
+
+    if ( alarmStates.testFlag(AlarmPending) ) {
+        if ( alarmStates.testFlag(AlarmIsRecurring) ) {
+            // Add alarm icon with a recurring-icon as overlay
+            setIcon( ColumnDeparture, KIcon("task-reminder", NULL,
+                                            QStringList() << "task-recurring") );
+        } else {
+            // Add alarm icon
+            setIcon( ColumnDeparture, KIcon("task-reminder") );
+        }
+    } else if ( alarmStates == NoAlarm ) {
+        // Remove alarm icon
+        setIcon( ColumnDeparture, KIcon() );
+    } else if ( alarmStates.testFlag(AlarmFired) ) {
+        // Add disabled alarm icon
+        KIconEffect iconEffect;
+        KIcon icon = alarmStates.testFlag( AlarmIsRecurring )
+                    ? KIcon( "task-reminder", NULL, QStringList() << "task-recurring" )
+                    : KIcon( "task-reminder" );
+        QPixmap pixmap = iconEffect.apply( icon.pixmap( 16 * m_info->sizeFactor ),
+                                           KIconLoader::Small, KIconLoader::DisabledState );
         KIcon disabledAlarmIcon;
         disabledAlarmIcon.addPixmap( pixmap, QIcon::Normal );
         setIcon( ColumnDeparture, disabledAlarmIcon );
@@ -1640,7 +1678,7 @@ void DepartureModel::setAlarmSettings( const AlarmSettingsList& alarmSettings )
                     addAlarm( depItem );
                 }
 
-                if ( !depItem->departureInfo()->matchedAlarms().contains( a ) ) {
+                if ( !depItem->departureInfo()->matchedAlarms().contains(a) ) {
                     depItem->departureInfo()->matchedAlarms() << a;
                 }
                 if ( alarmSettings.autoGenerated ) {
@@ -1906,7 +1944,7 @@ void DepartureModel::addAlarm( DepartureItem* item )
     } else {
         connect( item, SIGNAL(destroyed(QObject*)), this, SLOT(alarmItemDestroyed(QObject*)) );
         m_alarms.insert( alarmTime, item );
-        item->setAlarmStates(( item->alarmStates() & ~AlarmFired ) | AlarmPending );
+        item->setAlarmStates( (item->alarmStates() & ~AlarmFired) | AlarmPending );
     }
 }
 
