@@ -1969,6 +1969,38 @@ void PublicTransport::writeSettings( const Settings& settings )
         {
             updateColorGroupSettings();
         }
+
+        if ( changed.testFlag(SettingsIO::ChangedAlarmSettings) && m_modelJourneys ) {
+            for ( int row = 0; row < m_modelJourneys->rowCount(); ++row ) {
+                // Use a dummy DepartureInfo that "mimics" the first journey part of the current journey
+                JourneyItem *journeyItem = static_cast<JourneyItem*>( m_modelJourneys->item(row) );
+                JourneyInfo journeyInfo = *journeyItem->journeyInfo();
+                QString lineString = journeyInfo.routeTransportLines().isEmpty()
+                        ? QString() : journeyInfo.routeTransportLines().first();
+                VehicleType vehicleType = journeyInfo.routeVehicleTypes().isEmpty()
+                        ? Unknown : journeyInfo.routeVehicleTypes().first();
+                DepartureInfo departureInfo( QString(), lineString, QString(),
+                                             journeyInfo.departure(), vehicleType );
+                AlarmStates alarmStates = NoAlarm;
+                for ( int a = 0; a < m_settings.alarmSettings.count(); ++a ) {
+                    AlarmSettings alarmSettings = m_settings.alarmSettings.at( a );
+                    if ( alarmSettings.affectedStops.contains(m_settings.currentStopSettingsIndex)
+                         && alarmSettings.enabled && alarmSettings.filter.match(departureInfo) )
+                    {
+                        // TODO Could be fired already?
+                        alarmStates |= AlarmPending;
+                        if ( alarmSettings.autoGenerated ) {
+                            alarmStates |= AlarmIsAutoGenerated;
+                        }
+                        if ( alarmSettings.type == AlarmApplyToNewDepartures ) {
+                            alarmStates |= AlarmIsRecurring;
+                        }
+                        break;
+                    }
+                }
+                journeyItem->setAlarmStates( alarmStates );
+            }
+        }
     } else {
         kDebug() << "No changes made in the settings";
     }
